<?xml version="1.0"?>
<package format="2">
  <name>pyCAS</name>
  <version>0.1.0</version>
  <description>A decision-making framework for reasoning about competence.</description>

  <maintainer email="cbasich@cs.umass.edu">Connor Basich</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export></export>
</package>
